  instance. (LDAP-140)

* DistinguishedName now returns compactly formatted String representations
  from toString, e.g.:
  cn=John Doe,ou=Company,c=Sweden
  rather than
  cn=John Doe, ou=Company, c=Sweden
  To keep using the old formatting (for backward compatibility) set the
  system property org.springframework.ldap.core.spacedDnFormat to true.
  (LDAP-138, LDAP-112, LDAP-91) 

* Now using Maven for building internally. (LDAP-80, LDAP-82, LDAP-95)
  
* Added HardcodedFilter class and corresponding PropertyEditor FilterEditor,
  to allow for easily working with pre-encoded search filters 
  e.g. in configuration files. (LDAP-28)
  
* Added ContextSourceAndHibernateTransactionManager to enable integration
  of client-side LDAP Transactions in a Hibernate environment. (LDAP-115)

* Added append method to BinaryLogicalFilter allowing client code to use
  and/or filters from the same code. (LDAP-116)

* Introduced DirContextAuthenticationStrategy to AbstractContextSource
  to enable more flexible context authentication strategies, e.g.
  TLS and Proxy Auth. (LDAP-124)
  
* Corrected reference doc claiming DataAccessException hierarchy. (LDAP-106)

* Probably the most requested feature of all - a plain method for simple 
  authentication is now provided in the ContextSource interface.
  (LDAP-39, LDAP-103) 

* The order of multi-valued attributes is now properly preserved by
  DirContextAdapter#getModificationItems(). (LDAP-96)
  
* ContextSourceTransactionManager now properly throws a 
  CannotCreateTransactionException if anything goes wrong in doBegin(). (LDAP-122)
  
* It is now possible to set the criticality on PagedResultsControl.
  (LDAP-126)
  
* DirContextAdapter now has a getObjectAttributes method, as stated in
  reference docs. (LDAP-137)

* DirContextAdapter#getStringAttributes, getObjectAttributes, and
  getAttributeSortedStringSet now all return null if the requested Attribute
  is not present, and an empty result (array or set) if present but empty.