@@ -3,13 +3,13 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.springframework.org/schema/beans
                            http://www.springframework.org/schema/beans/spring-beans-2.0.xsd">
-
-	<bean class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
+	<bean
+		class="org.springframework.beans.factory.config.PropertyPlaceholderConfigurer">
 		<property name="location" value="/conf/ldap.properties" />
 		<property name="systemPropertiesModeName" value="SYSTEM_PROPERTIES_MODE_OVERRIDE" />
 	</bean>
-
-	<bean id="contextSource" class="org.springframework.ldap.test.ContextSourceEc2InstanceLaunchingFactoryBean">
+	<bean id="contextSource"
+		class="org.springframework.ldap.test.ContextSourceEc2InstanceLaunchingFactoryBean">
 		<property name="awsKey" value="${AWS_KEY}" />
 		<property name="awsSecretKey" value="${AWS_SECRET_KEY}" />
 		<property name="imageName" value="${aws.ami}" />
@@ -18,10 +18,9 @@
 		<property name="base" value="dc=jayway,dc=se" />
 		<property name="userDn" value="${userDn}" />
 		<property name="password" value="${password}" />
+		<property name="pooled" value="true" />
 	</bean>
-
-	<bean id="ldapTemplate"
-		class="org.springframework.ldap.core.LdapTemplate">
+	<bean id="ldapTemplate" class="org.springframework.ldap.core.LdapTemplate">
 		<constructor-arg ref="contextSource" />
 	</bean>
 </beans>
